--- a/pom.xml
+++ b/pom.xml
@@ -59,12 +59,12 @@
 			<dependency>
 				<groupId>com.hellblazer</groupId>
 				<artifactId>utils</artifactId>
-				<version>0.0.1</version>
+				<version>0.0.2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.hellblazer</groupId>
 				<artifactId>nexus</artifactId>
-				<version>1.0.1</version>
+				<version>1.0.2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
