--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 			<dependency>
 				<groupId>com.hellblazer</groupId>
 				<artifactId>utils</artifactId>
-				<version>0.0.2-SNAPSHOT</version>
+				<version>0.0.2</version>
 			</dependency>
 			<dependency>
 				<groupId>com.hellblazer</groupId>
